Now also showing bars for filtered and total mapped elements